--- a/definicion.html
+++ b/definicion.html
@@ -21,7 +21,7 @@
             </td>
         </tr>
         <tr> <!--contenido-->
-            <td>Inicio</td>
+            <td>Definicion</td>
         </tr>
         <tr>
             <td>
