--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link rel="stylesheet" href="stylos.css">  
-    <title>Ella no esta buscando novioooo quiere salir a joder UUUAAAAA</title>
+    <title>HOY ES NOCHE DE FREE FIRE</title>
 </head>
 <body style="background-color: white;">
     <table border="1" width="100%" style="color: burlywood;">
@@ -19,8 +19,16 @@
                     </tr>
                 </table>
             </td>
+        </tr>        
+        <tr>
+            <td>
+                <div>
+                    <img src="img/Free-Fire-Max.jpg" alt="Freefire" id="img1">
+                </div>
+            </td>
         </tr>
         <tr> <!--contenido-->
+        
             <td>
                 <ul>
                     <li>&copy; Emilio Mtz</li>
