--- a/caracteristicas.html
+++ b/caracteristicas.html
@@ -21,7 +21,19 @@
             </td>
         </tr>
         <tr> <!--contenido-->
-            <td>Características</td>
+            <td>
+                <h2>caracteristicas</h2>
+                <p>
+                Algunas de las principales características de Free Fire son:
+                </p>
+                <ul>
+                <li>1. Modo Battle Royale: Free Fire es un juego de batalla real donde 50 jugadores se enfrentan en una isla para ser el último en pie.</li>
+                <li>2. Gráficos y Optimización Móvil: El juego está diseñado específicamente para dispositivos móviles, con gráficos optimizados y controles intuitivos para una experiencia fluida.</li>
+                <li>3. Variedad de Armas y Equipos: Free Fire ofrece una amplia selección de armas, vehículos y equipos que los jugadores pueden usar para obtener ventajas tácticas.</li>
+                <li>4. Personajes Únicos: El juego cuenta con una variedad de personajes con habilidades especiales que pueden marcar la diferencia en el campo de batalla.</li>
+                <li>5.Personajes Únicos: El juego cuenta con una variedad de personajes con habilidades especiales que pueden marcar la diferencia en el campo de batalla.</li>
+                </ul>
+            </td>
         </tr>
         <tr>
             <td>
