--- a/definicion.html
+++ b/definicion.html
@@ -20,8 +20,49 @@
                 </table>
             </td>
         </tr>
-        <tr> <!--contenido-->
-            <td>Definicion</td>
+        <tr> <!--contenido-->            
+            <td>
+                <h2>Definicion</h2>
+                <p>
+                    Aquí está la información sobre Free Fire en español:
+                
+                    Free Fire es un popular juego de batalla real (battle royale) móvil desarrollado y publicado por Garena. Aquí hay
+                    algunos puntos clave sobre Free Fire:
+                <ul>
+                    <li>
+                         1. Juego de batalla real: Free Fire es un juego de batalla real de 50 jugadores donde los jugadores saltan en
+                        paracaídas a una isla y compiten para ser el último jugador/equipo en pie.
+                    </li>
+                    <li>
+ 2. *Optimizado para móviles*: El juego está diseñado específicamente para dispositivos móviles, con controles
+                    intuitivos y gráficos optimizados para un rendimiento fluido en teléfonos inteligentes.
+                    </li>
+                    <li>
+  3. *Elementos de juego diversos*: Free Fire presenta una variedad de armas, vehículos y equipos que los jugadores
+                    pueden usar para obtener una ventaja sobre sus oponentes. También tiene personajes únicos con habilidades
+                    especiales.
+                    </li>
+                    <li>
+ 4. *Modelo free-to-play*: Free Fire es un juego gratuito, respaldado por compras dentro de la aplicación para
+                    artículos cosméticos y otras mejoras opcionales.                
+                    </li>
+                    <li>
+ 5. *Enorme popularidad*: El juego se ha convertido en uno de los juegos de batalla real más descargados y jugados en
+                    plataformas móviles, especialmente en regiones como la India, el Sudeste Asiático y América Latina.            
+                    </li>
+                    <li>
+  6. *Escena de esports*: Free Fire tiene una próspera escena de esports, con grandes torneos y ligas organizados por
+                    Garena y otros organizadores de terceros.
+                    </li>
+                    <li>
+ 7. *Actualizaciones frecuentes*: Garena actualiza regularmente Free Fire con nuevo contenido, características y
+                    eventos para mantener el juego fresco y atractivo para su gran base de jugadores.                
+                    </li>
+                </ul>                                                                                                                                                                                             
+                    En resumen, Free Fire es un juego de batalla real móvil altamente exitoso y popular que ofrece una experiencia de
+                    batalla real accesible y optimizada para móviles a los jugadores de todo el mundo.
+                </p>
+            </td>
         </tr>
         <tr>
             <td>
