--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <tr>
             <td>
                 <div>
-                    <img src="img/Free-Fire-Max.jpg" alt="Freefire" id="img1">
+                    <img src="img/l66220240618111943.jpeg" alt="Freefire" id="img1">
                 </div>
             </td>
         </tr>
