--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="stylos.css">  
     <title>HOY ES NOCHE DE FREE FIRE</title>
 </head>
-<body style="background-color: white;">
+<body style="background-color: rgb(26, 79, 192);">
     <table border="1" width="100%" style="color: burlywood;">
         <tr style="background-color:cornsilk;"> <!--encabezado-->
             <td>
